<resources>
    <string name="app_name">TimeOut</string>
    <string name="txtTeamName">TeamName</string>
    <string name="TeamLogo">Team Logo</string>
    <string name="viewLocation">View Location</string>
    <string name="viewPlayers">Find Player</string>
    <string name="viewLatestGames">Find match</string>
    <string name="btnBackPlayer">Back</string>
    <string name="txtPlayers">Players:</string>
    <string name="Search">Search</string>
    <string name="SearchField">Search here</string>
    <string name="title_activity_location">Map</string>
    <string name="edtPlayerName">Player name</string>
    <string name="btnSearchPlayer">Search</string>
    <string name="txtPlayerInfo">Player info</string>
    <string name="txtNameStatic">Name</string>
    <string name="txtPlayerPositionStatic">Position</string>
    <string name="txtWeight">Weight</string>
    <string name="txtHeight">Height</string>
    <string name="btnBackLocation">Back</string>
    <string name="btnMapTypeLocation">Map type</string>
    <string name="btnSearchGame">Search</string>
    <string name="txtHomeTeamStatic">Home team</string>
    <string name="txtVisitorteamStatic">Visitor team</string>
    <string name="txtScoreStatic">Score</string>
    <string name="Toast_TeamListActivity">There is no team with that name</string>
    <string name="Toast_Player">Player does not play for this team</string>
    <string name="Toast_Latestgames">Game not found</string>
    <string name="Toast_Location">"Maptype changed to "</string>
    <string name="Toast_Notification_Title">Team data available</string>
    <string name="Toast_Notification_ContextText">Check out data from</string>
</resources>