<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TeamActivity">

    <Button
        android:id="@+id/btnBackLocation"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnBackPlayer"
        app:layout_constraintEnd_toEndOf="@+id/btnGames"
        app:layout_constraintStart_toStartOf="@+id/btnGames"
        app:layout_constraintTop_toBottomOf="@+id/btnGames" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/TeamLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/imgLogo"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        tools:text="LA CLIPPERS" />

    <Button
        android:id="@+id/btnLocation"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/viewLocation"
        app:layout_constraintEnd_toEndOf="@+id/txtName"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <Button
        android:id="@+id/btnPlayers"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/viewPlayers"
        app:layout_constraintEnd_toEndOf="@+id/btnLocation"
        app:layout_constraintStart_toStartOf="@+id/btnLocation"
        app:layout_constraintTop_toBottomOf="@+id/btnLocation" />

    <Button
        android:id="@+id/btnGames"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/viewLatestGames"
        app:layout_constraintEnd_toEndOf="@+id/btnPlayers"
        app:layout_constraintStart_toStartOf="@+id/btnPlayers"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayers" />
</androidx.constraintlayout.widget.ConstraintLayout>